# morpho-specialfn

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
share/help/: specialfn.md
src/: CMakeLists.txt  specialfn.c  specialfn.h
src/cephes/: CMakeLists.txt
src/cephes/bessel/: CMakeLists.txt  airy.c  hyp2f1.c  hyperg.c  i0.c  i1.c  iv.c  j0.c  j1.c  jn.c  jv.c  k0.c  k1.c  kn.c  psi.c  struve.c  yn.c
src/cephes/cmath/: CMakeLists.txt  powi.c
src/cephes/cprob/: CMakeLists.txt  expx2.c  igam.c  igami.c  incbet.c  incbi.c  ndtr.c  ndtri.c
src/cephes/ellf/: CMakeLists.txt  ellie.c  ellik.c  ellpe.c  ellpj.c  ellpk.c
src/cephes/eval/: CMakeLists.txt  gamma.c  mconf.h  mtherr.c  polevl.c
src/cephes/misc/: CMakeLists.txt  beta.c  chbevl.c  dawsn.c  ei.c  expn.c  fac.c  fresnl.c  polylog.c  rgamma.c  shichi.c  sici.c  spence.c  zeta.c  zetac.c
test/: .gitignore  airy.morpho  bessel.morpho  besseln.morpho  beta.morpho  digamma.morpho  elliptic.morpho  erf.morpho  error_airy_bi_overflow.morpho  error_besselj_domain.morpho  error_beta_underflow.morpho  error_complete_elliptic_k_domain.morpho  error_confluent_hypergeometric_singularity.morpho  error_cosh_integral_singularity.morpho  error_cosine_integral_singularity.morpho  error_digamma_singularity.morpho  error_dilog_domain.morpho  error_ei_domain.morpho  error_erfc_underflow.morpho  error_expn_domain.morpho  error_gamma_domain.morpho  error_gauss_hypergeometric_overflow.morpho  error_hurwitz_zeta_domain.morpho  error_igam_underflow.morpho  error_igamc_underflow.morpho  error_incbet_domain.morpho  error_incbi_underflow.morpho  error_jacobi_sn_domain.morpho  error_lgam_overflow.morpho  error_modified_bessel_k_domain.morpho  error_names.morpho  error_names_dilog.morpho  error_names_elliptic.morpho  error_ndtri_domain.morpho  error_polylog_domain.morpho  error_rgamma_singularity.morpho  error_riemann_zeta_singularity.morpho  error_scaled_modified_bessel_k0_domain.morpho  error_scaled_modified_bessel_k1_domain.morpho  error_struve_domain.morpho  (+14 more)
test/MathematicaCrossCheck/: Gamma.nb
